# share-notes

./: .env.coolify.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  COOLIFY_DEPLOYMENT.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_COMPOSE_REFERENCE.md  FEATURE_FLAGS.md  KEYCLOAK_FIX_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  POST_MIGRATION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  README_MONOREPO.md  SAAS_BUSINESS_GUIDE.md  SETUP_CHECKLIST.md  STRIPE_SETUP.md  SUBSCRIPTION_COMPLETE.md  SUBSCRIPTION_RESTRICTIONS.md  TECH_STACK_UPDATE_SUMMARY.md  UI_REFACTORING_SUMMARY.md  docker-compose.coolify.yml  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  railway.toml  setup.sh
.github/workflows/: ci.yml  deploy-coolify.yml  deploy-railway-dev.yml
.husky/: pre-commit
backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_complete.py  002_add_note_type.py  003_fix_note_type_enum.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: notes.py  subscription.py  websocket.py
database/mongodb/: init.js
database/postgres/: create-databases.sh  docker-entrypoint-wrapper.sh  init.sql
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  railway.toml  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  config.ts  vite-env.d.ts
infrastructure/k8s/: 00-namespace.yaml  01-postgres.yaml  02-mongodb.yaml  03-redis.yaml  04-keycloak.yaml  05-backend.yaml  06-frontend.yaml  07-ingress.yaml
keycloak/: realm-export.json
scripts/: build-images.sh  cleanup.sh  deploy.sh
(+13 files in other folders)
